<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">凌晨视频</string>

    <!-- 按钮文字信息 -->
    <string name="btn_submit">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_delete">删除</string>
    <string name="btn_update">更新</string>

    <!-- 性别 -->
    <string name="gender_male">先生</string>
    <string name="gender_female">女士</string>

    <!-- 自定义提示信息 -->
    <string name="loading_titile">加载中</string>
    <string name="loading_content">正在载入...</string>
    <string name="time_title_hint">温馨提示</string>

    <!-- 下拉刷新 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="pull_to_refresh_update_at">上次刷新：%s</string>

    <!-- 无网络信息 -->
    <string name="not_network_title">网络未连接</string>
    <string name="not_network_content">请开启网络连接，\n以便获取周围餐厅信息</string>
    <string name="not_network_submit">开启</string>
    <string name="not_network_cancel">取消</string>
    <string name="not_network_title2">无网络连接</string>

    <!-- 首页 -->
    <string name="main_foot_message">首页</string>
    <string name="main_foot_grow_up">频道</string>
    <string name="main_foot_campus">VIP</string>
    <string name="main_foot_pilot">精品</string>
    <string name="main_foot_more">我的</string>
    <string name="vip_string1">激情无限成人影院，高清热播院线大片\n性感劲爆美女直播，独家私密网红视频\n立即开通会员，免费观看所有激情视频</string>

    <!-- 我的 -->
    <string name="setting_user_account">个人账户</string>
    <string name="setting_phone">投诉QQ</string>
    <string name="setting_weixin">投诉微信</string>
    <string name="setting_protocol">用户协议</string>
    <string name="setting_history">播放记录</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_vip_level">VIP等级</string>

    <string-array name="vip_level_list">
        <item>未付费用户</item>
        <item>包年会员</item>
        <item>终身会员</item>
    </string-array>
    
    <string name="clear_cache_content">清除内存完成</string>

    <string name="phone">4007888580</string>
    <string name="qq">1685038446</string>
    <string name="weixin">xiaoruyi009</string>
    <string name="setting_phone_desc">客服热线电话：4007-888-580\n投诉受理时间：工作日08:00-18:00</string>
    <string name="pay_info">"亲爱的用户：\n\u0009\u0009在使用GG影音(以下简称GG影音)时,请您务必仔细阅读并透彻理解本声明.您可以选择不使用GG影音, 但您如果使用GG影音,您的行为将被视为对本声明的全部认可. 　GG影音中的视频均为GG影音以非人工检索的方式、根据您选择或键入的关键 字自动生成到第三方网页的链接,除GG影音注明之服务条款外,其他一切因使用GG影音而可能遭致的意外、疏忽、侵权及其造成的损失(包括因 下载搜索链接到的第三网站的内容而感染到的病毒),GG影音对其概不负责,亦不承担任何法律责任.任何通过使用GG影音而搜索链接到的第三方 网页均系他人制作或提供,您可能从该第三方网页上获得视频及享用服务,GG影音对其合法性概不负责,亦不承担任何法律责任.GG影音搜索结果 根据您选择或键入的关键字自动搜索获得并生成,不代表GG影音赞成被搜索到的第三网页上的内容或立场.您应该对搜索引擎的结果自行承担风险.GG影音不做任何形式的保证;不保证搜索结果满足您的要求,不保证搜索服务不中断;不保证搜索结果的安全性,正确性、及时性、合法性. 因网络状况,通讯线路、第三网站等任何原因而导致您不能正常使用GG影音,GG影音不承担任何法律责任.GG影音尊重并保护所有使用GG影音 用户的个人隐私权,您注册的个人资料,非经您亲自许可或根据相关法律、法规的强制性规定,GG影音不会主动的泄漏给第三方.GG影音提 醒您;您在使用搜索引擎时输入的关键字将不被认为是您的个人隐私资料.任何网站如果不想被GG影音收录(即不被搜索到)应及时向GG影音 反映,否则,GG影音将依照惯例视其为可收录网站.任何单位或者个人认为通过GG影音链接所搜索到的第三方网页内容可能涉嫌侵犯其信 息网络传播权,应及时向GG影音提出书面权利通知,并提出身份证明,权属证明及详细侵权情况证明.GG影音在收到上述法律文件后,将会依 法尽快断开相关链接内容."</string>

    <!-- xListView -->
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>