<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/f20_title_bg"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/f20_logo" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="5dp"
            android:background="@null"
            android:src="@drawable/f20_icon_search"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/pay_year_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:src="@drawable/icon_vip_year"
            android:visibility="invisible" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/f20_down_bg"
        android:paddingTop="5dp" >

        <RadioGroup
            android:id="@+id/tab_foot_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/main_foot_message_rb"
                style="@style/navigation_radio_button_style"
                android:checked="true"
                android:drawableTop="@drawable/btn_radio_home_selector"
                android:text="@string/main_foot_message" />

            <RadioButton
                android:id="@+id/main_foot_grow_up_rb"
                style="@style/navigation_radio_button_style"
                android:drawableTop="@drawable/btn_radio_channel_selector"
                android:text="@string/main_foot_grow_up" />

            <RadioButton
                android:id="@+id/main_foot_campus_rb"
                style="@style/navigation_radio_button_style"
                android:drawableTop="@drawable/btn_radio_vip_selector"
                android:text="@string/main_foot_campus" />

            <RadioButton
                android:id="@+id/main_foot_pilot_rb"
                style="@style/navigation_radio_button_style"
                android:drawableTop="@drawable/btn_radio_fine_selector"
                android:text="@string/main_foot_pilot" />

            <RadioButton
                android:id="@+id/main_foot_more_rb"
                style="@style/navigation_radio_button_style"
                android:drawableTop="@drawable/btn_radio_user_selector"
                android:text="@string/main_foot_more" />
        </RadioGroup>

        <ImageView
            android:id="@+id/main_foot_bottom_icon_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="0dp"
            android:background="@drawable/f20_down_checked" />
    </RelativeLayout>

</LinearLayout>