<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:layout_marginTop="@dimen/global_padding_small"
        android:background="@color/line_gray" />

    <LinearLayout
        android:id="@+id/setting_user_account_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_white_background"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/global_item_height_mid"
            android:layout_weight="1"
            android:drawableLeft="@drawable/f20_icon_user"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/waimai_shoplist_filter_listview_padding_right"
            android:paddingRight="@dimen/waimai_shoplist_filter_listview_padding_right"
            android:text="@string/setting_user_account"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:id="@+id/setting_user_account_tv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/global_item_height_mid"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/icon_next_arrow"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/waimai_shoplist_filter_listview_padding_right"
            android:text="888"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:background="@color/line_gray" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:layout_marginTop="@dimen/global_padding_small"
        android:background="@color/line_gray" />

    <TextView
        android:id="@+id/setting_phone_tv"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_item_height_mid"
        android:background="@drawable/item_white_background"
        android:drawableLeft="@drawable/f20_icon_phone"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/icon_next_arrow"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/waimai_shoplist_filter_listview_padding_right"
        android:paddingRight="@dimen/waimai_shoplist_filter_listview_padding_right"
        android:text="@string/setting_phone"
        android:textColor="@color/text_black"
        android:textSize="@dimen/sp_15" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:background="@color/line_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_white_background"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/setting_weixin_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/global_item_height_mid"
            
            android:drawableLeft="@drawable/f20_icon_phone"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/waimai_shoplist_filter_listview_padding_right"
            android:paddingRight="@dimen/waimai_shoplist_filter_listview_padding_right"
            android:text="@string/setting_weixin"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp_15" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/waimai_shoplist_filter_listview_padding_right"
            android:text="@string/weixin"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>
r

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:background="@color/line_gray" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:layout_marginTop="@dimen/global_padding_small"
        android:background="@color/line_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_white"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/setting_protocol_tv"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/global_item_height_mid"
            android:background="@drawable/item_white_background"
            android:drawableLeft="@drawable/f20_icon_list"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/icon_next_arrow"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/waimai_shoplist_filter_listview_padding_right"
            android:paddingRight="@dimen/waimai_shoplist_filter_listview_padding_right"
            android:text="@string/setting_protocol"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp_15" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/global_line_size"
            android:layout_marginLeft="@dimen/waimai_shoplist_filter_listview_padding_right"
            android:layout_marginRight="@dimen/waimai_shoplist_filter_listview_padding_right"
            android:background="@color/line_gray" />

        <TextView
            android:id="@+id/setting_history_tv"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/global_item_height_mid"
            android:background="@drawable/item_white_background"
            android:drawableLeft="@drawable/f20_icon_time"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/icon_next_arrow"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/waimai_shoplist_filter_listview_padding_right"
            android:paddingRight="@dimen/waimai_shoplist_filter_listview_padding_right"
            android:text="@string/setting_history"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp_15" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/global_line_size"
            android:layout_marginLeft="@dimen/waimai_shoplist_filter_listview_padding_right"
            android:layout_marginRight="@dimen/waimai_shoplist_filter_listview_padding_right"
            android:background="@color/line_gray" />

        <TextView
            android:id="@+id/setting_clear_cache_tv"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/global_item_height_mid"
            android:background="@drawable/item_white_background"
            android:drawableLeft="@drawable/f20_icon_stting"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/icon_next_arrow"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/waimai_shoplist_filter_listview_padding_right"
            android:paddingRight="@dimen/waimai_shoplist_filter_listview_padding_right"
            android:text="@string/setting_clear_cache"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:background="@color/line_gray" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:layout_marginTop="@dimen/global_padding_small"
        android:background="@color/line_gray" />

    <TextView
        android:id="@+id/setting_about_tv"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_item_height_mid"
        android:background="@drawable/item_white_background"
        android:drawableLeft="@drawable/f20_icon_phone"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/icon_next_arrow"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/waimai_shoplist_filter_listview_padding_right"
        android:paddingRight="@dimen/waimai_shoplist_filter_listview_padding_right"
        android:text="@string/setting_about"
        android:textColor="@color/text_black"
        android:textSize="@dimen/sp_15" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:background="@color/line_gray" />

</LinearLayout>